--- a/.ebextensions/env.config
+++ b/.ebextensions/env.config
@@ -1,3 +1,5 @@
 option_settings:
-  aws:elasticbeanstalk:application:environment:
-      USE_SSL: 'true'
+    aws:elasticbeanstalk:application:environment:
+        PYTHONPATH: "/var/app/current:$PYTHONPATH"
+    aws:elasticbeanstalk:container:python:
+        WSGIPath: "application:app"
